# coolbits

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/coolbits/: __init__.py  cli.py  config.py  default_config.yaml  manifest.py  util.py
src/coolbits/analyze/: __init__.py  assemble.py  captions.py  clip.py  motion.py  pipeline.py  proxy.py  shots.py  subtitles.py
src/coolbits/render/: __init__.py  encode.py  pipeline.py  score.py  select.py
